<resources>
    <string name="app_name">Exercise03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_fragment1">Fragment 1</string>
    <string name="tv_fragment2">Fragment 2</string>
    <string name="rb_option1">Option 1</string>
    <string name="rb_option2">Option 2</string>
    <string name="tv_main_activity">Main Activity</string>
    <string name="hint_data_results">here data/results</string>
    <string name="btn_send_value">Send value</string>
    <string name="tv_fragment_left">Left fragment</string>
    <string name="btn_go">Go</string>
    <string name="tv_fragment_right">Right fragment</string>
    <string name="menu_item_left">Left Fragment</string>
    <string name="menu_item_center">Center Fragment</string>
    <string name="menu_item_right">Right Fragment</string>
    <string name="tv_preferred_color">Preferred color:</string>
    <string name="tv_title">Personal data</string>
    <string name="tv_color">Color</string>
    <string name="tv_birth_date">Birth date</string>
    <string name="date_hint">dd-mm-yyyy</string>
    <string name="cam_color1">Color 1</string>
    <string name="cam_color2">Color 2</string>
    <string name="cam_color3">Color 3</string>
    <string name="mi_title_1">Theme 1</string>
    <string name="mi_title_2">Theme 2</string>
    <string name="mi_title_3">Theme 3</string>
    <string name="mi_title_4">Default</string>
    <string name="hint_edit_data">here data edit result</string>
    <string name="btn_edit">Edit</string>
    <string name="et_name_surname">Enter name and surname</string>
    <string name="tv_fragment_edit">Fragment Edit</string>
    <string name="et_text">Enter text</string>
    <string name="btn_send_text">Send text</string>
</resources>